force-app/main/default/objects/LogSetting__mdt/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <label>LogLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
                <default>true</default>
                <label>NONE</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>DEBUG</fullName>
            </value>
            <value>
                <fullName>FINE</fullName>
            </value>
            <value>
                <fullName>FINER</fullName>
            </value>
            <value>
                <fullName>FINEST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>