force-app/main/default/objects/LogSetting__mdt/fields/LogViaEvents__c.field-meta.xml
<CustomField>
    <fullName>LogViaEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Via Events</label>
    <type>Checkbox</type>
</CustomField>