force-app/main/default/objects/LogSetting__mdt/fields/LogViaObject__c.field-meta.xml
<CustomField>
    <fullName>LogViaObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Via Object</label>
    <type>Checkbox</type>
</CustomField>