force-app/main/default/objects/LogSetting__mdt/fields/LogViaSystemDebug__c.field-meta.xml
<CustomField>
    <fullName>LogViaSystemDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Via System Debug</label>
    <type>Checkbox</type>
</CustomField>