force-app/main/default/objects/LogSetting__mdt/fields/Mute__c.field-meta.xml
<CustomField>
    <fullName>Mute__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mute</label>
    <type>Checkbox</type>
</CustomField>