force-app/main/default/objects/LogSetting__mdt/fields/RetentionPeriodInDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionPeriodInDays__c</fullName>
    <label>Retention Period (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>