force-app/main/default/objects/LogSetting__mdt/fields/writeToEvent__c.field-meta.xml
<CustomField>
    <fullName>writeToEvent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Events</label>
    <type>Checkbox</type>
</CustomField>