force-app/main/default/objects/LogSetting__mdt/fields/writeToObject__c.field-meta.xml
<CustomField>
    <fullName>writeToObject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Object</label>
    <type>Checkbox</type>
</CustomField>