force-app/main/default/objects/LogSetting__mdt/fields/writeToSystemDebug__c.field-meta.xml
<CustomField>
    <fullName>writeToSystemDebug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable System Debug</label>
    <type>Checkbox</type>
</CustomField>