force-app/main/default/objects/LogSetting__mdt/listViews/All_Log_Settings.listView-meta.xml
<ListView>
    <fullName>All_Log_Settings</fullName>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>LogLevel__c</columns>
    <columns>WriteToEvent__c</columns>
    <columns>WriteToSystemDebug__c</columns>
    <columns>RetentionPeriodInDays__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Log Settings</label>
    <language>en_US</language>
</ListView>